fixed positioning for productcard landing on mobile s

--- a/src/styles/_mainProductContainer.scss
+++ b/src/styles/_mainProductContainer.scss
@@ -47,7 +47,11 @@
     }
 
     h4 {
-      font-size: 1.5rem;
+      font-size: 1.2rem;
+
+      @include tablet {
+        font-size: 1.5rem;
+      }
     }
 
     .priceBig {
